# WebDAVToon

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PROJECT_STATUS.md  README.md  build.gradle.kts  build_output.txt  build_release.bat  current_app_logs.txt  final_check_logs.txt  full_log.txt  gradle.properties  hotl-workflow-always-external-video-player.md  hotl-workflow-dark-mode-toolbar-folder-text-fix.md  hotl-workflow-external-player-webdav-special-char-fix.md  hotl-workflow-image-preview-and-local-gallery-reliability.md  hotl-workflow-jav-avi-thumbnail-fixes.md  hotl-workflow-major-pr-gate-external-player.md  hotl-workflow-major-pr-gate-fixes.md  hotl-workflow-media3-video-playback.md  hotl-workflow-merge-main-and-fix-ci-cleaner.md  hotl-workflow-project-health-remediation.md  hotl-workflow-video-player-control-layout-refresh.md  hotl-workflow-video-player-double-tap-and-timeout.md  hotl-workflow-video-thumbnail-and-wmv-support.md  hotl-workflow-waterfall-video-thumbnail-aspect-ratio.md  paseo.json  settings.gradle.kts  ui.xml  ui_home.xml  webdav_client_logs.txt
.codebuddy/plans/: waterfall-thumbnail-quality-setting_08a54a69.md  webtoon-pinch-zoom_89f4c3ff.md
.github/workflows/: build-and-release.yml
.trae/documents/: plan_20260119_182755.md  修复设备上安装旧版本UI的问题.md  (+1 more)
app/: build.gradle.kts  proguard-rules.pro
docs/: FEATURES_SUMMARY.md  TECHNICAL_DOCS.md  USER_MANUAL.md  hotl-workflow-smb-share-enum-d1.md  paseo-worktree-archive.md
image-proxy-server/: README.md
keystore/: signing.properties
rust-core/: Cargo.toml
rust-core/src/: database.rs  lib.rs  media_proxy.rs  models.rs  remote_fs.rs  repository.rs  runtime.rs  smb_fs.rs
scripts/: paseo-teardown.ps1  paseo-worktree-setup.ps1
(+272 files in other folders)
