[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.28.0", features = ["cli", "tokio"] }
thiserror = "2.0"
log = "0.4"
android_logger = "0.14"
tokio = { version = "1.36", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "time", "sync"] }
futures = "0.3"
opendal = { version = "0.50", features = ["services-webdav", "services-fs", "services-ftp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
bytes = "1"
percent-encoding = "2.3"
rand = "0.8"
smb = "=0.11.2"

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
